tests/rgs/syntax_errors/story_missing_period.rgs
STORY a PRIORITY 1
ACTION run.
